--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -47,7 +47,7 @@
 
 <div class="container">
     <form>
-<!--        <button class="btn btn-secondary" onclick="history.back()">홈</button>-->
+        <!--        <button class="btn btn-secondary" onclick="history.back()">홈</button>-->
         <a th:href="@{/board/{postId}/updateform(postId=${post.id})}"
            class="btn btn-warning"
            th:if="${#authentication.principal.username == post.user.username}">
@@ -59,7 +59,8 @@
 
         <div>
             글 번호 : <span id="id"><i th:text="${post.id}"></i> </span>
-            작성자 : <span><i th:text="${post.user.username}"></i> </span>
+            작성자 : <a th:href="@{/user/info/{id}(id=${post.user.id})}" th:text="${post.user.username}"></a>
+            <p>조회수: <span th:text="${post.viewCount}">0</span></p>
         </div>
         <br/>
         <div>
@@ -74,24 +75,32 @@
         <div class="card">
             <form>
                 <input type="hidden" id="postId" th:value="${post.id}">
-
                 <div class="card-body"><textarea id="comment-content" class="form-control" rows="1"></textarea></div>
-                <div class="card=footer"><button type="button" id="btn-comment-save" class="btn btn-primary">등록</button></div>
+                <div class="card-footer"><button type="button" id="btn-comment-save" class="btn btn-primary">등록</button></div>
             </form>
         </div>
         <br>
         <div>
             <h2>댓글</h2>
             <ul id="comment-box" class="list-group">
-                <li class="list-group-item" th:each="comment : ${post.comments}">
+                <li class="list-group-item" th:each="comment : ${comments}">
                     <div th:text="${comment.content}">댓글 내용</div>
                     <div class="d-flex justify-content-between">
                         <div class="font-italic" th:text="${comment.user.username}">작성자</div>
-                        <button class="btn btn-danger btn-sm" th:onclick="'index.commentDelete(' + ${post.id} + ',' + ${comment.id} + ')'">삭제</button>
+                        <button class="btn btn-danger btn-sm"
+                                th:onclick="'index.commentDelete(' + ${post.id} + ',' + ${comment.id} + ')'"
+                                th:if="${#authentication.principal.username == comment.user.username}">삭제</button>
                     </div>
                 </li>
-
             </ul>
+            <div>
+                    <span th:if="${currentPage > 0}">
+                        <a th:href="@{|/board/${post.id}?page=${currentPage - 1}|}">Previous</a>
+                    </span>
+                <span th:if="${currentPage < totalPages - 1}">
+                        <a th:href="@{|/board/${post.id}?page=${currentPage + 1}|}">Next</a>
+                    </span>
+            </div>
         </div>
     </form>
 </div>
